kubernetes/KC/deployments/media/overseerr/ingress.sops.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: overseerr
    namespace: media
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:YGJX332kBqJZKSquUR2G+YdOUB+V7B4=,iv:xeiroPrhXYXtigCuqZ0X5utMZaxzDQyx8rWE+BaUSlU=,tag:1yE4ENYB16ypguiwJSfppA==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:Mnj/f+A7k04T,iv:OAivVIg3UjIUwk/UexMy7Vb78Lts5nL95j4Vctq37HY=,tag:qnkO5W0Nnkwtk+b2bxUy9w==,type:str]
              port: ENC[AES256_GCM,data:tiTCZQ==,iv:XXrhaQUZkymfSMJa8FOwvz9oOGoXFdQ/6f4WjMTFXOk=,tag:XWc7hSUiizOYAz2rTKD7XQ==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:IIRF8yHnjH+RN98=,iv:3mSmT7WaFZgsVqHzXGGRWR1Pp4H2tp3fDbpexIaG0CI=,tag:FoYZsK0GhHJHjWiypfPXXw==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Sk11NEV6dmlxQ0kvQ3ow
[...]
            1pBjR6eQgyz9qN6KtBONsRmCd4UGozdVOaNdsbF6Riv6MdhetMAn/g==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-05-08T22:40:22Z"
    mac: ENC[AES256_GCM,data:i+h2+jg1TNOft4ow23lyLlKpwss4hAA8YTz1lr7h6BS1ixRuumPewEtQL6CqiT5LPByPliPw9/33xG+gX46KanGnrZbynFODo7ttrplEelLMgQPMA1OGVJx286FACiGMr/g0juxmmFny3e5CC8h1j6DeyftrsZqWfLTYgVMRKjU=,iv:C2vLW88gjLZnuFo7pNEEakXRNhBsvnCxVnNslU9Id3k=,tag:WNwaBY1hpAeLGT2Ts/HQZQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks)$
    version: 3.8.1
